--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     outline: 1px solid red; /* чтобы контейнер был виден, в конце можно будет удалить это св-во */
     margin: 0 auto;
     width: 100%;
+    max-width: 1100px;
     /* 📍 Максимальная ширина для контейнера */
 }
 
@@ -31,14 +32,20 @@ header span {
     background-color: #fafaff;
     padding: 60px 0;
     min-height: 100vh;
+    display: flex;
+    align-items: center;
     /* 📍 Свойства flexbox для размещения container-a вертикально по центру */
 }
 
 .main-section .wrapper {
+    display: flex;
+    align-items: center;
     /* 📍 Свойствa flexbox для размещения блока с текстом и изображения в ряд, и центрирования их по вертикали */
 }
 
 .text-wrapper {
+    min-width: 425px;
+
     /* 📍 Cвойство для ограничения ширины блока с текстом в первой секции */
 }
 
@@ -63,6 +70,9 @@ header span {
 }
 
 .about-section .wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
     /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
 }
 
@@ -81,11 +91,15 @@ select {
 
 select:hover,
 .text-field:hover {
+    cursor: pointer;
     /* 📍 Стили для выпадающего списка и текстового поля при наведении курсора */
 }
 
 
 .info-wrapper {
+    display: flex;
+    flex-direction: row;
+
     /* 📍 Свойство flexbox для расположения 2-х списков в ряд */
 }
 
