--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ select {
 select:hover,
 .text-field:hover {
     cursor: pointer;
+    border: 1px solid #2965f1;
     /* 📍 Стили для выпадающего списка и текстового поля при наведении курсора */
 }
 
@@ -116,9 +117,11 @@ select:hover,
 
 .frameworks-list,
 .books-list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
     /* 📍 Свойства flexbox для отступов между элементами в списках */
 }
-
 .frameworks-list {
     font-weight: 400;
     font-size: 16px;
@@ -127,10 +130,16 @@ select:hover,
 }
 
 .skills-block {
+    display: flex;
+    flex-direction: column-reverse;
     /* 📍 Свойства flexbox для расположения формы над элементами с классом .label */
 }
 
 .skills {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    min-width: 50%;
     /* 📍 Свойства flexbox для расположения элементов с классом .label */
 }
 
@@ -138,6 +147,7 @@ select:hover,
     font-weight: 400;
     font-size: 16px;
     padding-left: 20px;
+    min-width: 50%;
 }
 
 .label {
@@ -173,6 +183,9 @@ form {
 }
 
 .btn:hover {
+    cursor: pointer;
+    background: rgba(41, 101, 241, 0.9);
+
     /* 📍 Стили для кнопки при наведении курсора */
 }
 
@@ -185,7 +198,8 @@ table {
     border-collapse: collapse;
     font-weight: 400;
     font-size: 14px;
-    margin: 0 auto;
+    margin: auto;
+
 }
 
 th, td {
@@ -195,6 +209,8 @@ th, td {
 footer {
     background-color: rgba(163, 167, 255, 0.3);
     padding: 26px 0;
+    display: flex;
+    text-align: center;
     /* 📍 Свойство для расположения ссылки горизонтально по центру */
 }
 
@@ -206,5 +222,6 @@ footer {
 }
 
 .footer-link:hover {
+    text-decoration: underline;
     /* 📍 Стили для ссылки при наведении курсора */
 }
